# enumcapsulate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
enumcapsulate/: Cargo.toml  README.md
enumcapsulate/src/: lib.rs
enumcapsulate/tests/: derive-tests.rs  logic-tests.rs  tests.rs
enumcapsulate/tests/derive-tests/as_variant/pass/enum/: zero_variants.out.rs
enumcapsulate/tests/derive-tests/as_variant_mut/fail/: union.err.txt  union.out.rs
enumcapsulate/tests/derive-tests/as_variant_mut/fail/enum/: struct_variants.err.txt
enumcapsulate/tests/derive-tests/as_variant_mut/fail/enum/tuple_variants/: multiple_fields.err.txt  multiple_fields.out.rs  no_fields.err.txt  no_fields.out.rs
enumcapsulate/tests/derive-tests/as_variant_ref/fail/: struct.err.txt
enumcapsulate/tests/derive-tests/as_variant_ref/fail/enum/: struct_variants.err.txt  unit_variants.out.rs
enumcapsulate/tests/derive-tests/as_variant_ref/pass/enum/: zero_variants.out.rs
enumcapsulate/tests/derive-tests/as_variant_ref/pass/enum/tuple_variants/: one_field.rs
enumcapsulate/tests/derive-tests/encapsulate/pass/enum/: zero_variants.out.rs
enumcapsulate/tests/derive-tests/encapsulate/pass/enum/tuple_variants/: one_field.out.rs
enumcapsulate/tests/derive-tests/from/fail/: union.err.txt
enumcapsulate/tests/derive-tests/from/fail/enum/: struct_variants.err.txt  struct_variants.out.rs  unit_variants.rs
enumcapsulate/tests/derive-tests/from/fail/enum/tuple_variants/: zero_fields.err.txt
enumcapsulate/tests/derive-tests/from_variant/fail/: struct.rs  union.err.txt
enumcapsulate/tests/derive-tests/from_variant/fail/enum/: struct_variants.err.txt
enumcapsulate/tests/derive-tests/from_variant/fail/enum/tuple_variants/: many_fields.err.txt  many_fields.out.rs  many_fields.rs  zero_fields.err.txt  zero_fields.rs
enumcapsulate/tests/derive-tests/from_variant/pass/enum/: zero_variants.out.rs
enumcapsulate/tests/derive-tests/into_variant/fail/: struct.rs
enumcapsulate/tests/derive-tests/into_variant/fail/enum/: struct_variants.out.rs  unit_variants.rs
enumcapsulate/tests/derive-tests/try_into/fail/: union.err.txt
enumcapsulate/tests/derive-tests/try_into/fail/enum/: struct_variants.err.txt  struct_variants.rs  unit_variants.err.txt  unit_variants.out.rs
enumcapsulate/tests/derive-tests/try_into/pass/enum/: zero_variants.out.rs
enumcapsulate/tests/derive-tests/variant_downcast/fail/: struct.err.txt
enumcapsulate/tests/derive-tests/variant_downcast/fail/enum/: struct_variants.err.txt
enumcapsulate/tests/derive-tests/variant_downcast/pass/: enum.out.rs
enumcapsulate/tests/expand-macros/as_variant/pass/enum/: zero_variants.rs
enumcapsulate/tests/expand-macros/as_variant_mut/fail/: struct.err.txt  struct.out.rs  struct.rs  union.err.txt  union.rs
enumcapsulate/tests/expand-macros/as_variant_mut/fail/enum/: struct_variants.err.txt  struct_variants.out.rs  struct_variants.rs  unit_variants.err.txt  unit_variants.out.rs
enumcapsulate/tests/expand-macros/as_variant_mut/pass/enum/: no_variants.rs
enumcapsulate/tests/expand-macros/as_variant_ref/fail/: struct.err.txt  struct.out.rs  struct.rs  union.err.txt  union.rs
enumcapsulate/tests/expand-macros/as_variant_ref/fail/enum/: struct_variants.err.txt  unit_variants.err.txt  unit_variants.rs
enumcapsulate/tests/expand-macros/as_variant_ref/pass/enum/: zero_variants.rs
enumcapsulate/tests/expand-macros/encapsulate/pass/enum/: zero_variants.out.rs  zero_variants.rs
enumcapsulate/tests/expand-macros/from/fail/: struct.err.txt  struct.out.rs  union.err.txt  union.rs
enumcapsulate/tests/expand-macros/from/fail/enum/: struct_variants.err.txt  struct_variants.rs  unit_variants.err.txt
enumcapsulate/tests/expand-macros/from_variant/fail/: struct.err.txt  struct.out.rs  union.err.txt  union.rs
enumcapsulate/tests/expand-macros/from_variant/fail/enum/: struct_variants.err.txt  unit_variants.err.txt  unit_variants.out.rs  unit_variants.rs
enumcapsulate/tests/expand-macros/from_variant/pass/enum/: zero_variants.rs
enumcapsulate/tests/expand-macros/into_variant/fail/: struct.err.txt  struct.out.rs  union.err.txt  union.rs
enumcapsulate/tests/expand-macros/into_variant/fail/enum/: struct_variants.err.txt  struct_variants.rs  unit_variants.err.txt  unit_variants.out.rs
enumcapsulate/tests/expand-macros/into_variant/pass/enum/: zero_variants.out.rs
enumcapsulate/tests/expand-macros/try_into/fail/: struct.err.txt  union.err.txt
enumcapsulate/tests/expand-macros/try_into/fail/enum/: struct_variants.err.txt  unit_variants.err.txt
enumcapsulate/tests/expand-macros/try_into/pass/enum/: zero_variants.rs
enumcapsulate/tests/expand-macros/variant_downcast/fail/: struct.err.txt  struct.rs  union.err.txt  union.out.rs  union.rs
enumcapsulate/tests/expand-macros/variant_downcast/fail/enum/: struct_variants.err.txt  struct_variants.rs  unit_variants.err.txt  unit_variants.out.rs
macros/: Cargo.toml  README.md
macros/src/: config.rs  enum_deriver.rs  lib.rs  type_visitor.rs  type_visitor_mut.rs  utils.rs
macros/src/config/: exclude.rs  for_enum.rs  for_variant.rs  tests.rs
macros/src/config/for_enum/: config.rs  discriminant.rs  encapsulate.rs  standard.rs  variant_discriminant.rs
macros/src/config/for_variant/: config.rs  discriminant.rs  standard.rs  variant_discriminant.rs
src/: lib.rs
(+211 files in other folders)
