[workspace]
members = ["macros"]
resolver = "2"

[workspace.package]
repository = "https://github.com/regexident/enumcapsulate"
homepage = "https://github.com/regexident/enumcapsulate"
documentation = "https://docs.rs/enumcapsulate"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.78.0"
version = "0.6.3"

[package]
name = "enumcapsulate"
description = "Safe casting for newtype enums and their variants"
keywords = ["enum", "variant", "cast", "encapsulation"]
categories = ["rust-patterns"]
readme = "README.md"

repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumcapsulate-macros = { version = "0.6.3", path = "./macros", optional = true }

[dev-dependencies]
tryexpand = "=0.12.0"

[features]
default = ["derive"]
derive = ["macros"]
macros = ["dep:enumcapsulate-macros"]
