[package]
name = "enumcapsulate"
description = "Safe casting for newtype enums and their variants"
repository = "https://github.com/regexident/enumcapsulate"
keywords = ["enum", "variant", "cast", "encapsulation"]
categories = ["rust-patterns"]
readme = "README.md"

edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tryexpand = "0.6.0"
