[package]
name = "enumcapsulate"
description = "Safe casting for newtype enums and their variants"
repository = "https://github.com/regexident/enumcapsulate"
keywords = ["enum", "variant", "cast", "encapsulation"]
categories = ["rust-patterns"]
readme = "README.md"

edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumcapsulate-macros = { path = "../enumcapsulate-macros", optional = true }

[dev-dependencies]
tryexpand = "0.6.0"

[features]
default = ["derive"]
derive = ["macros"]
macros = ["dep:enumcapsulate-macros"]
