[package]
name = "enumcapsulate-macros"
description = "Procedural macros for 'enumcapsulate' crate"
keywords = ["petgraph", "type-safe", "typed"]
readme = "README.md"

repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.79", features = ["span-locations"] }
quote = "1.0.35"
syn = "2.0.53"
